Convert to stream and add tests